--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
         <title>Synthonic</title>
 
         <link rel="icon" type="image/png" href="images/favicon.png" />
-        <link rel='stylesheet' href='css/main.css'>
-        <link rel='stylesheet' href='css/slider.css'>
+        <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/github-fork-ribbon-css/0.1.1/gh-fork-ribbon.min.css" />
+        <link rel='stylesheet' href='css/main.min.css'>
+        <link rel='stylesheet' href='css/slider.min.css'>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js'></script>
-        <script src="js/complex_array.js"></script>
-        <script src="js/fft.js"></script>
-        <script src='js/audio_graphs.js'></script>
-        <script src='js/synth.js'></script>
-        <script src='js/midi.js'></script>
-        <script src='js/keyboard.js'></script>
-        <script src='js/app.js'></script>
+        <script src="js/complex_array.min.js"></script>
+        <script src="js/fft.min.js"></script>
+        <script src='js/audio_graphs.min.js'></script>
+        <script src='js/synth.min.js'></script>
+        <script src='js/midi.min.js'></script>
+        <script src='js/keyboard.min.js'></script>
+        <script src='js/app.min.js'></script>
     </head>
     <body>
         <div class='container'>
@@ -2643,6 +2644,14 @@
 
             </div>
 
+        </div>
+
+
+        <!-- Github ribbon-->
+        <div class="github-fork-ribbon-wrapper right-bottom">
+            <div class="github-fork-ribbon">
+                <a href="https://github.com/Curly-Mo/synthonic">Fork on GitHub</a>
+            </div>
         </div>
 
     </body>
